- menu jumping fix

--- a/css/labs.css
+++ b/css/labs.css
@@ -1,3 +1,5 @@
+html{overflow-y: scroll;}
+
 /*body {font-family: proxima-nova, ff-meta-web-pro; }*/
 .clear{clear: both;}
 
